20070729 menu_data.pl,printer.c,settings.pl,ui/gtk/{debugger.c,gtkjoystick.c,
	 gtkmouse.c,pokefinder.c,stock.c},z80/coretest.c: more -Wextra tidyup.
20070730 Makefile.am,configure.in,fuse.c,sound/{Makefile.am,alsasound.c,
	 aosound.c,coreaudiosound.c,dxsound.c,hpsound.c,lowlevel.h,nullsound.c,
	 osssound.c,sdlsound.c,sfifo.c,sound.c,sunsound.c},spectrum.c,timer.c:
	 move sound selection logic into configure.in (patch #1763265).
20070730 utils.c: mmap no longer used.
20070730 Makefile.am,configure.in,event.c,fuse.c,rzx.c,spectrum.c,tape.c,
	 timer.[ch],timer/{Makefile.am,sdl.c,timer.c,timer.h,unix.c,win32.c},
	 ui/gtk/gtkui.c,widget/widget.c: move timer code selection logic into
	 configure.in.
20070731 configure.in: fix spelling of ALSA (thanks, Gergely).
20070731 configure.in,compat/{Makefile.am,dirname.c,getopt.c,getopt1.c,
	 mkstemp.c}: move compatability detection logic into configure.in.
20070731 timer/{Makefile.am,sdl.c,unix.c,win32.c}: add missing properties and
	 fix initial comments (Stuart).
20070802 machines/tc2048.c: correct joystick port mask on TC2048 (verified on
         real hardware) (Fred).
20070803 configure.in,timer/timer.h: move timer header selection logic into
	 configure.in.
20070803 sound/alsasound.c: release code should not dump 100 lines of stuff
	 onto the console.
20070804 configure.in,fuse.c,compat/Makefile.am,compat/amiga/Makefile.am,
	 compat/morphos/{Makefile.am,osname.c},compat/unix/{Makefile.am,
	 osname.c},compat/win32/{Makefile.am,osname.c}: move OS name function
	 selection into configure.in.
20070804 compat.h,settings.pl,trdos.c,utils.c,compat/amiga/{Makefile.am,paths.c},
	 compat/morphos/Makefile.am,compat/unix/{Makefile.am,paths.c},
	 compat/win32/{Makefile.am,paths.c}: move pathname functions into
	 compatability directories.
20070804 configure.in: remove debug mode as its not used anywhere.
20070806 compat/unix/osname.c: ensure we have the prototype for strerror()
         (Fred).