@@ -81,6 +81,11 @@ ula_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
 
   display_set_lores_border( b & 0x07 );
   sound_beeper( 0, b & 0x10 );
+  /* FIXME: I don't think we should have to worry about whether the tape
+     is playing here, but if we don't do this and use normal speed tape
+     loading with tape noise, this will intefere with the generation of
+     the normal loading noises at the moment */
+  if( !tape_playing ) sound_beeper( 1, b & 0x8 );
 
   if( machine_current->timex ) {
     keyboard_default_value = 0x5f;
